--- a/Homework_1.ipynb
+++ b/Homework_1.ipynb
@@ -280,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 36,
       "id": "cf877ba9",
       "metadata": {
         "scrolled": false,
@@ -288,7 +288,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cf877ba9",
-        "outputId": "63ac8dac-cbf6-4565-9995-119917bb36f6"
+        "outputId": "c437b2ea-1b18-440f-98f8-7e1a338e8b5c"
       },
       "outputs": [
         {
@@ -304,8 +304,34 @@
           "name": "stdout",
           "text": [
             "(100, 1)\n",
-            "(20, 1)\n",
-            "(100, 639450)\n",
+            "(20, 1)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 100/100 [11:24<00:00,  6.85s/it]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(100, 639450)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 100/100 [02:26<00:00,  1.47s/it]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "(20, 639450)\n"
           ]
         }
@@ -331,8 +357,8 @@
         "print(np.shape(genre_test))\n",
         "\n",
         "# Extract training set\n",
-        "#for i in tqdm(range(100)):\n",
-        "audio_train_list = [ds.audio[int(i)].numpy(aslist = True) for i in i_train]\n",
+        "for i in tqdm(range(100)):\n",
+        "  audio_train_list = [ds.audio[int(i)].numpy(aslist = True) for i in i_train]\n",
         "new_audio_train = np.array([])\n",
         "for i in range(len(audio_train_list)):\n",
         "  audio_train_list[i] = audio_train_list[i][:n_samples]\n",
@@ -346,8 +372,8 @@
         "print(np.shape(audio_train))\n",
         "\n",
         "# Extract test set\n",
-        "#for i in tqdm(range(100)):\n",
-        "audio_test_list = [ds.audio[int(i)].numpy(aslist = True) for i in i_test]\n",
+        "for i in tqdm(range(100)):\n",
+        "  audio_test_list = [ds.audio[int(i)].numpy(aslist = True) for i in i_test]\n",
         "new_audio_test = np.array([])\n",
         "for i in range(len(audio_test_list)):\n",
         "  audio_test_list[i] = audio_test_list[i][:n_samples]\n",
@@ -363,7 +389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 37,
       "id": "cb7f0e9b",
       "metadata": {
         "colab": {
@@ -371,7 +397,7 @@
           "height": 256
         },
         "id": "cb7f0e9b",
-        "outputId": "abd4e297-5869-45c9-b5e7-2c7164a7f11e"
+        "outputId": "fce9f5dc-1cae-4749-91d5-d7dc40ca4fbb"
       },
       "outputs": [
         {
@@ -406,7 +432,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 38,
       "id": "618ab118",
       "metadata": {
         "id": "618ab118"
@@ -439,7 +465,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 39,
       "id": "5450ba9d",
       "metadata": {
         "id": "5450ba9d",
@@ -447,7 +473,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 256
         },
-        "outputId": "36a0e941-1c83-4b81-9935-a88bde194c58"
+        "outputId": "a3ffd0e3-0645-4292-88f2-95bd190ec1bc"
       },
       "outputs": [
         {
@@ -472,7 +498,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 40,
       "id": "1c53044c",
       "metadata": {
         "id": "1c53044c"
@@ -576,7 +602,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 41,
       "id": "a15b9d78",
       "metadata": {
         "id": "a15b9d78",
@@ -584,7 +610,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 410
         },
-        "outputId": "f07e6c38-b766-4605-d3af-dc517310cfb7"
+        "outputId": "8ed8d9fa-f877-4f5a-f90b-00d70287e9ff"
       },
       "outputs": [
         {
@@ -616,7 +642,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "id": "b1c4efe0",
       "metadata": {
         "id": "b1c4efe0"
@@ -635,50 +661,97 @@
         "    Returns:\n",
         "        f_vector: Feature vector\n",
         "    \"\"\"\n",
-        "\n",
         "    # Compute rhythmic features\n",
+        "    # compute novelty function\n",
+        "    novelty, Fs_nov = compute_phase_novelty(x, Fs=Fs, N=N, H=H)\n",
+        "    # compute the standard deviation and the mean of the novelty function\n",
+        "    std_novelty = np.std(novelty)\n",
+        "    mean_novelty = np.mean(novelty)\n",
+        "    # tempogram and zero crossing rate, do I leave the default value or use the same N and H as before?\n",
+        "    tempogram = librosa.feature.tempogram(y=novelty, sr=Fs_nov, hop_length=H, win_length=N)\n",
+        "    zero_cross = librosa.feature.zero_crossing_rate(x, frame_length=N, hop_length=H)\n",
+        "    # compute the standard deviation and the mean of the zero crossing rate\n",
+        "    std_zero_cross = np.std(zero_cross)\n",
+        "    mean_zero_cross = np.mean(zero_cross)\n",
         "\n",
-        "\n",
+        "    spectral_flux = librosa.onset.onset_strength(y=novelty, sr=Fs_nov)\n",
+        "    std_spectral_flux = np.std(spectral_flux)\n",
+        "    mean_spectral_flux = np.mean(spectral_flux)\n",
         "    # Concatenate numpy arrays\n",
-        "\n",
-        "\n",
+        "    f_vector = [novelty, Fs_nov, std_novelty, mean_novelty, tempogram, zero_cross, std_zero_cross, mean_zero_cross]\n",
         "\n",
         "    return f_vector"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "id": "de1e5668",
       "metadata": {
-        "id": "de1e5668"
+        "id": "de1e5668",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3216b2a4-d767-4b3f-ca05-b3f257a6fe8d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/numpy/core/fromnumeric.py:2009: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+            "  result = asarray(a).shape\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(100, 8)\n",
+            "(20, 8)\n"
+          ]
+        }
+      ],
       "source": [
         "# Compute feature vector for all the audio files inside the training set\n",
         "N = 2048\n",
         "H = 128\n",
         "\n",
         "train_fvector = []\n",
+        "for x in audio_train:\n",
+        "  train_fvector.append(compute_feature_vector(x, Fs, N=N, H=H))\n",
         "\n",
-        "...\n",
         "\n",
         "test_fvector = []\n",
-        "\n",
-        "..."
+        "for x in audio_test:\n",
+        "  test_fvector.append(compute_feature_vector(x, Fs, N=N, H=H))\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "id": "ffd8cef7",
       "metadata": {
-        "id": "ffd8cef7"
+        "id": "ffd8cef7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "38f667bb-1e3f-421b-d9b7-2f5f0c15a9e9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(100, 8)\n",
+            "(20, 8)\n"
+          ]
+        }
+      ],
       "source": [
         "# Check train_fvector and genre_train shapes\n",
-        "\n"
+        "print(np.shape(train_fvector))\n",
+        "print(np.shape(test_fvector))"
       ]
     },
     {
